--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,13 @@ footer {
 
 .player {
   min-width: 320px;
+  height: 280px;
   background-image: linear-gradient(black, gray);
   border-radius: 1rem;
   padding: 2rem;
   color: white;
   box-shadow: 2px 2px 3px black;
+  opacity: 0.7;
 }
 /* Title */
 .title {
@@ -39,7 +41,16 @@ footer {
   display: block;
   margin: 0 auto 1rem auto;
 }
-  
+/* Progress */
+.progress-container {
+  height: .6rem;
+  background-color: lightgray;
+  margin-bottom: 1rem;
+}
+.progress {
+  background-color: goldenrod;
+  width: 0; height: 100%;
+}
 /* Controls */
 .controls {
   display: flex;
