--- a/css/style.css
+++ b/css/style.css
@@ -19,12 +19,50 @@ footer {
 }
 
 .player {
-  width: 270px;
-  height: 180px;
-  background-image: none;
+  min-width: 320px;
+  width: 340px;
+  height: 280px;
+  background-image: linear-gradient(black, gray);
   border-radius: 1rem;
   padding: 2rem;
   color: white;
   box-shadow: 2px 2px 3px black;
-  opacity: 0.9;
+  opacity: 0.7;
+}
+/* Title */
+.title {
+  margin-top: 0;
+  text-align: center;
+}
+/* Cover */
+.cover {
+  width: 200px;
+  height: auto;
+  border-radius: .3rem;
+  display: block;
+  margin: 0 auto 1rem auto;
+}
+/* Progress */
+.progress-container {
+  height: .6rem;
+  background-color: lightgray;
+  margin-bottom: 1rem;
+}
+.progress {
+  background-color: goldenrod;
+  width: 0; height: 100%;
+}
+/* Controls */
+.controls {
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: 1rem;
+}
+.controls button {
+  background-color: transparent;
+  border: none;
+}
+.controls i {
+  font-size: 1.7rem;
+  color: white;
 }
