--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,10 @@ body {
 footer {
   text-align: center;
   text-align-last: auto;
-  position: fixed;
+  position: static;
   left: 0px;
   bottom: 0px;
-  height: auto;
+  height: calc(5.5rem);
   width: 100%;
   background: #141526;
 }
