--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
  font-family: 'Raleway'; font-size: 18px;
-  background-image: url('../IMG_0674.png');
+  background-image: linear-gradient(rgb(2, 2, 2), rgb(238, 255, 0));
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top;
@@ -10,19 +10,10 @@ body {
 footer {
   text-align: center;
   text-align-last: auto;
-  position: static;
+  position: fixed;
   left: 0px;
   bottom: 0px;
   height: calc(5.5rem);
   width: 100%;
   background: #141526;
-}
-
-div.mensajes{
-  background-color: white;
-  border-radius: 0.8rem;
-}
-
-form.needs-validation{
-  border-radius: 0.8rem;
 }
